# streamlit-qa-app

./: chat_with_documents.py  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
chroma_db/52c50522-541d-4185-8593-5e2a8228033a/: index_metadata.pickle
